--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     <h1 class="mb-5">Cold Coffee</h1>
                     <div class="row align-items-center mb-5">
                         <div class="col-4 col-sm-3">
-                            <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-1.jpg" alt="">
+                            <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/foto/WhatsApp Image 2022-09-12 at 1.50.02 PM (1).jpeg" alt="">
                             <h5 class="menu-price">$5</h5>
                         </div>
                         <div class="col-8 col-sm-9">
