--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Greenday</title>
+    <title>STARCOM</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free Website Template" name="keywords">
     <meta content="Free Website Template" name="description">
@@ -31,7 +31,7 @@
     <div class="container-fluid p-0 nav-bar">
         <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
             <a href="index.html" class="navbar-brand px-lg-4 m-0">
-                <h1 class="m-0 display-4 text-uppercase text-white">Greenday</h1>
+                <h1 class="m-0 display-4 text-uppercase text-white">STARCOM</h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -64,16 +64,16 @@
                     <img class="w-100" src="img/carousel-1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <h2 class="text-primary font-weight-medium m-0"></h2>
-                        <h1 class="display-1 text-white m-0">GREENDAY</h1>
-                        <h2 class="text-white m-0">* SINCE 2021 *</h2>
+                        <h1 class="display-1 text-white m-0">STARCOM</h1>
+                        <h2 class="text-white m-0">* SINCE 2023 *</h2>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="w-100" src="img/carousel-2.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <h2 class="text-primary font-weight-medium m-0"></h2>
-                        <h1 class="display-1 text-white m-0">GREENDAY</h1>
-                        <h2 class="text-white m-0">* SINCE 2021 *</h2>
+                        <h1 class="display-1 text-white m-0">STARCOM</h1>
+                        <h2 class="text-white m-0">* SINCE 2023 *</h2>
                     </div>
                 </div>
             </div>
@@ -432,7 +432,7 @@
             </div> -->
         </div>
         <div class="container-fluid text-center text-white border-top mt-4 py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-            <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">greenday</a>. All Rights Reserved.</a></p>
+            <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">STARCOM</a>. All Rights Reserved.</a></p>
             <!-- <p class="m-0 text-white">Designed by <a class="font-weight-bold" href="https://htmlcodex.com">HTML Codex</a></p> -->
         </div>
     </div>
